src/test/deca/context/invalid/init-int-float.deca
// Description : 
//	 test d'initialisation int <-- float
// Resultats :
//	 6:9: Non compatible assignment of expression
{
	int i = 0.5;
}